--- a/templates/syfosoknader/arbeidstakere.hbs
+++ b/templates/syfosoknader/arbeidstakere.hbs
@@ -1,88 +1,4 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="UTF-8">
-    <title>Søknad om sykepenger</title>
-    {{#block 'syfosoknader/partials/style' }}
-    {{/block}}
-</head>
-<body>
-<div id="header">
-    <img class="navlogo" src="{{ image "Navlogo.png" }}"/>
-    <h1 class="title">Søknad om sykepenger</h1>
-</div>
-<div class="container">
-    <div class="personinfo">
-        <div class="persontekst">
-            <div class="persontekst__sidetopp">
-                <img class="personikon" src="{{ image "Personikon.png" }}"/>
-                <div class="persontekst__personalia">
-                    <p class="navn">
-                        {{ navn }}
-                    </p>
-                    <p class="id">
-                        {{ insert_at fnr 6 }}
-                    </p>
-                </div>
-                <div class="sendt">
-                    {{# if korrigerer}}
-                        <p class="korrigert">Korrigert</p>
-                    {{/if}}
-                    {{# if innsendtDato}}
-                        <p>
-                            Sendt til NAV<br/>{{ iso_to_date innsendtDato }}
-                        </p>
-                    {{/if}}
-                    {{# if sendtArbeidsgiver}}
-                        <p>
-                            Sendt til arbeidsgiver<br/>{{ iso_to_date sendtArbeidsgiver }}
-                        </p>
-                    {{/if}}
-                </div>
-            </div>
-
-            {{# each soknadPerioder as |periode|~}}
-                <p class="header__tittel">
-                    {{ iso_to_date periode.fom }} - {{ iso_to_date periode.tom }}
-                </p>
-                <p>
-                    {{ periode.grad }} % sykmeldt
-                </p>
-                {{# if periode.faktiskGrad }}
-                    <p>
-                        Oppgitt faktisk arbeidsgrad {{ periode.faktiskGrad }} %
-                    </p>
-                {{/if}}
-            {{/each}}
-
-            {{# if sykmeldingUtskrevet }}
-                <p class="header__tittel">
-                    Dato sykmeldingen ble skrevet
-                </p>
-                <p>
-                    {{ iso_to_date sykmeldingUtskrevet }}
-                </p>
-            {{/if}}
-
-            <p class="header__tittel">
-                Arbeidsgiver
-            </p>
-            <p>
-                {{ arbeidsgiver }}
-            </p>
-        </div>
-    </div>
-    <div class="sporsmalcontainer">
-        {{# each sporsmal as |spm|~}}
-            <div class="oppsummering__seksjon">
-                {{> syfosoknader/partials/spmpartial spm}}
-            </div>
-        {{/each}}
-    </div>
-</div>
-<div id="footer">
-    <span class="soknadsid">{{ soknadsId }}</span>
-    <span class="sidetall">side <span id="pagenumber"></span> av <span id="pagecount"></span></span>
-</div>
-</body>
-</html>
+{{#> syfosoknader/partials/base }}
+    {{#*inline "doctitle"}}Søknad om sykepenger{{/inline}}
+    {{#*inline "title"}}Søknad om sykepenger{{/inline}}
+{{/syfosoknader/partials/base}}
