--- a/templates/syfosoknader/selvstendignaeringsdrivende.hbs
+++ b/templates/syfosoknader/selvstendignaeringsdrivende.hbs
@@ -1,66 +1,4 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="UTF-8">
-    <title>Søknad selvstendig næringsdrivende</title>
-    {{#block 'syfosoknader/partials/style' }}
-    {{/block}}
-</head>
-<body>
-<div id="header">
-    <img class="navlogo" src="{{ image "Navlogo.png" }}"/>
-    <h1 class="title">Søknad om sykepenger for selvstendig næringsdrivende og frilansere</h1>
-</div>
-<div class="container">
-    <div class="personinfo">
-        <img class="personikon" src="{{ image "Personikon.png" }}"/>
-        <div class="persontekst">
-            <div class="sendt">
-                {{# if korrigerer}}
-                    <p class="korrigert">Korrigert</p>
-                {{/if}}
-                <p>
-                    Sendt til NAV {{ iso_to_date innsendtDato }}
-                </p>
-            </div>
-
-            <p class="navn">
-                {{ navn }}
-            </p>
-            <p class="id">
-                {{ insert_at fnr 6 }}
-            </p>
-
-            {{# each soknadPerioder as |periode|~}}
-                <p class="header__tittel">
-                    {{ iso_to_date periode.fom }} - {{ iso_to_date periode.tom }}
-                </p>
-                <p>
-                    {{ periode.grad }} % sykmeldt
-                </p>
-            {{/each}}
-
-            {{# if sykmeldingUtskrevet }}
-                <p class="header__tittel">
-                    Dato sykmeldingen ble skrevet
-                </p>
-                <p>
-                    {{ iso_to_date sykmeldingUtskrevet }}
-                </p>
-            {{/if}}
-        </div>
-    </div>
-    <div class="sporsmalcontainer">
-        {{# each sporsmal as |spm|~}}
-            <div class="oppsummering__seksjon">
-            {{> syfosoknader/partials/spmpartial spm}}
-            </div>
-        {{/each}}
-    </div>
-</div>
-<div id="footer">
-    <span class="soknadsid">{{ soknadsId }}</span>
-    <span class="sidetall">side <span id="pagenumber"></span> av <span id="pagecount"></span></span>
-</div>
-</body>
-</html>
+{{#> syfosoknader/partials/base }}
+    {{#*inline "doctitle"}}Søknad selvstendig næringsdrivende{{/inline}}
+    {{#*inline "title"}}Søknad om sykepenger for selvstendig næringsdrivende og frilansere{{/inline}}
+{{/syfosoknader/partials/base}}
