--- a/templates/dsopkontroll/kontrollforespoersel.hbs
+++ b/templates/dsopkontroll/kontrollforespoersel.hbs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <title>Kontroll forespørsel</title>
     <style>
         * {
