partially fix tests

--- a/templates/dsopkontroll/kontrollforespoersel.hbs
+++ b/templates/dsopkontroll/kontrollforespoersel.hbs
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8" />
     <title>Kontroll forespørsel</title>
+    <meta name="subject" content="Dokumentemne"/>
+    <meta name="author" content="pdfgen"/>
+    <meta name="description" content="Kontroll forespørsel"/>
     <style>
         * {
             font-family: "Source Sans Pro" !important;
