--- a/templates/syfosoknader/partials/spmpartial.hbs
+++ b/templates/syfosoknader/partials/spmpartial.hbs
@@ -3,7 +3,7 @@
         {{#eq verdi "CHECKED"}}
             <div class="oppsummering__sporsmalscontainer">
                 <div class="oppsummering__avkrysset">
-                    <img class="checkbox" src="{{ image "Checkboks.png" }}"/>
+                    <img class="checkbox" alt="Sjekkboks-ikon" src="{{ image "Checkboks.png" }}"/>
                     <span class="svar svar--checkbox">{{ sporsmalstekst }}</span>
                 </div>
                 {{# if undersporsmal }}
@@ -23,7 +23,7 @@
         {{#eq verdi "CHECKED"}}
             <div class="oppsummering__sporsmalscontainer">
                 <div class="oppsummering__avkrysset">
-                    <img class="checkbox" src="{{ image "Checkboks.png" }}"/>
+                    <img class="checkbox" alt="Sjekkboks-ikon" src="{{ image "Checkboks.png" }}"/>
                     <span class="svar svar--checkbox">{{ sporsmalstekst }}</span>
                 </div>
                 {{# if undersporsmal }}
@@ -43,7 +43,7 @@
         {{#eq verdi "CHECKED"}}
             <div class="oppsummering__sporsmalscontainer">
                 <div class="oppsummering__avkrysset">
-                    <img class="checkbox" src="{{ image "Checkboks.png" }}"/>
+                    <img class="checkbox" alt="Sjekkboks-ikon" src="{{ image "Checkboks.png" }}"/>
                     <span class="svar svar--checkbox">{{ iso_to_date sporsmalstekst }}</span>
                 </div>
                 {{# if undersporsmal }}
@@ -236,7 +236,7 @@
             </p>
         {{/if }}
         <div class="oppsummering__avkrysset">
-            <img class="checkbox" src="{{ image "Checkboks.png" }}"/>
+            <img class="checkbox" alt="Sjekkboks-ikon" src="{{ image "Checkboks.png" }}"/>
             <span class="svar svar--checkbox">
                 {{ capitalize svar.0.verdi }}
             </span>
@@ -363,7 +363,7 @@
         {{#eq verdi "CHECKED"}}
             <div class="oppsummering__sporsmalscontainer">
                 <div class="oppsummering__avkrysset">
-                    <img class="checkbox" src="{{ image "Checkboks.png" }}"/>
+                    <img class="checkbox" alt="Sjekkboks-ikon" src="{{ image "Checkboks.png" }}"/>
                     <span class="svar svar--checkbox">{{ sporsmalstekst }}</span>
                 </div>
                 {{# if undersporsmal }}
