make tests be happy about every problematic UA-case

--- a/templates/syfosoknader/partials/base.hbs
+++ b/templates/syfosoknader/partials/base.hbs
@@ -20,9 +20,9 @@
             <div class="persontekst__sidetopp">
                 <img class="personikon" alt="Personikon" src="{{ image "Personikon.png" }}"/>
                 <div class="persontekst__personalia">
-                    <p class="navn">
+                    <h2 class="navn">
                         {{ navn }}
-                    </p>
+                    </h2>
                     <p class="id">
                         {{ insert_at fnr 6 }}
                     </p>
