--- a/templates/syfosoknader/partials/style.hbs
+++ b/templates/syfosoknader/partials/style.hbs
@@ -79,16 +79,13 @@
 
     .title {
         display: inline-block;
-        position: absolute;
-        top: 12px;
-        left: 100px;
+        margin-left: 35px;
     }
 
     .navlogo {
-        display: inline-block;
-        padding-top: 15px;
-        padding-bottom: 12px;
-        margin-left: 3px;
+        position: absolute;
+        padding-top: 10px;
+        padding-left: 15px;
         width: 48px;
     }
 
@@ -106,6 +103,7 @@
         font-weight: bold;
         font-size: 16px;
         width: 350px;
+        margin-bottom: 0;
     }
 
     .id {
